# MfsFlow

./: README.md  __init__.py  pyproject.toml  requirements.txt  run_analysis_pipeline.py
docs/: architecture.md  configuration.md  installation.md  output.md  troubleshooting.md  user_guide.md
mfsflow/: __init__.py  barcode_discovery.py  bootstrap.py  cli.py  constant.py  path_layout.py  pipeline_config.py  pipeline_modules.py  report.py  run_config.py  runtime.py
mfsflow/config/: __init__.py  validation.py
mfsflow/pipeline/: __init__.py  runner.py
mfsflow/report_assets/: template_auto.html  template_manual.html  template_multi.html
mfsflow/scripts/: __init__.py  barcode_corrector.py  barcode_detection.py  constant.py  correct_BCtag.py  correct_UBtag.py  dge_analysis.py  fqfilter.py  generate_stats.py  (+8 more)
mhsflow/: __init__.py  cli.py  runtime.py
report/: template_auto.html  template_manual.html  template_multi.html
src/: barcode_corrector.py  barcode_detection.py  barcode_discovery.py  constant.py  correct_BCtag.py  dge_analysis.py  fqfilter.py  generate_stats.py  mapping_analysis.py  pipeline_config.py  pipeline_modules.py  report.py  run_featurecounts.py
tests/: test_barcode_by_well.py  test_barcode_corrector.py  test_barcode_discovery.py  test_bc_selection.py  test_cli_inputs.py  test_fqfilter_logic.py  test_gene_body_coverage.py  test_h5ad_export.py  test_mapping_and_counting_logic.py  test_mhsflow_package.py  test_q30_stats.py  test_report_metadata.py  test_saf_builder.py  test_stream_corrector.py  test_umi_utils.py
yaml/: example_config.yaml
(+13 files in other folders)
