[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mhsflow"
version = "0.1.0"
description = "Smart-seq3/MGI analysis pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "PyYAML>=5.1",
    "pysam>=0.21,<0.23",
    "numpy>=1.20,<1.25",
    "pandas>=1.3,<2.1",
    "scipy>=1.7,<1.11",
    "matplotlib>=3.5,<3.8",
    "anndata>=0.8,<0.10",
    "h5py>=3.1,<3.11",
]

[project.scripts]
mhsflow = "mhsflow.cli:main"

[tool.setuptools]
packages = ["mhsflow", "mhsflow.config", "mhsflow.pipeline", "mhsflow.stages"]
