[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mfsflow"
version = "1.0.0"
description = "Smart-seq3/MGI analysis pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "PyYAML>=5.1",
    "pysam>=0.21",
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "anndata>=0.8",
    "h5py>=3.1",
]

[project.scripts]
mfsflow = "mfsflow.cli:main"

[tool.setuptools]
packages = [
    "mfsflow",
    "mfsflow.config",
    "mfsflow.pipeline",
    "mfsflow.stages",
    "mfsflow.scripts",
]

[tool.setuptools.package-data]
mfsflow = [
    "yaml/*.yaml",
    "report_assets/*",
    "software/*",
]
